creating security for the macaron backend and front-end